# relatorios-tecnicos

./: .gitignore  README.md  render.yaml
Backend/: analises.py  clientes_motores.csv  main.py  pdf_generator.py  pyproject.toml  render.yaml  requirements.txt
Frontend/: package-lock.json  package.json
Frontend/app/: layout.js  page.js
Frontend/app/editar-clientes/: page.js
Frontend/app/novo-relatorio/: page.js
Frontend/app/relatorios-salvos/: page.js
