[tool.poetry]
name = "relatorios-backend"
version = "1.0.0"
description = "API para geração de relatórios"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pandas = { version = "^2.0.2", extras = ["performance"] }
matplotlib = "^3.7.1"
fpdf2 = "^2.7.4"
python-dotenv = "^1.0.0"
fastapi-mail = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
