[tool.poetry]
name = "relatorios-backend"
version = "0.1.0"
description = "API para geração de relatórios"

[tool.poetry.dependencies]
python-multipart = "^0.0.6"
python = "^3.9"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
fpdf2 = "^2.7.4"
python-dotenv = "^1.0.0"
fastapi-mail = { version = "^1.0.0", extras = ["aioredis"] }  # ⚠️ Linha 9 - Verifique!

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
